# harchive

./: .ghci  .gitignore  Makefile  NEWS  README  TODO  harchive.cabal  hcat  mktables.sh  run-tests  setup-pairing.sh
etc/: build.sh  run-test.sh
etc/conf/: build  test
src/: Attributes.hs  Auth.hs  Chunk.hs  DB.hs  DecodeSexp.hs  Devid.hs  FileServer.hs  HCat.hs  Harchive.hs  Hash.hsc  Hello.hs  HexDump.hs  MBox.hs  Meter.hs  Pool.hs  PoolServer.hs  Progress.hs  Protocol.hs  Server.hs  Sqlite3.hsc  Status.hs  Store.hs  Tree.hs
src/Chunk/: IO.hs
src/Client/: Command.hs
src/DB/: Config.hs
src/Harchive/: Dump.hs  IO.hs
src/Harchive/Store/: Backup.hs  Sexp.hs
src/Pool/: Command.hs  Local.hs  Memory.hs  Remote.hs
src/Pool/Local/: DB.hs
src/Protocol/: Attr.hs  Chan.hs  ChannelNumbers.hs  Chunk.hs  ClientPool.hs  Control.hs  Messages.hs  Packing.hs
src/System/Backup/: BinProp.hs  Chunk.hs  FileIndex.hs  HashMap.hs  Pool.hs
src/System/Backup/Chunk/: IO.hs  Store.hs
src/System/Backup/HashMap/: File.hs
src/System/Backup/Pool/: FileIndex.hs  Metadata.hs
src/System/Linux/: Directory.hsc
src/Text/: HexDump.hs  JavaProperties.hs  Properties.hs
src/Text/JavaProperties/: XML.hs
src/Text/Properties/: JavaXml.hs  Node.hs  Types.hs
test/: All.hs  BinPropCheck.hs  ChunkCheck.hs  ChunkIOCheck.hs  Errors.hs  FileIndexCheck.hs  GenWords.hs  Harness.hs  HashCheck.hs  HashMapCheck.hs  HashMapFileCheck.hs  HelloCheck.hs  LinuxDirCheck.hs  Makefile  PoolCheck.hs  PropertiesCheck.hs  TestJavaProperties.hs
tests/: AuthTest.hs  GenWords.hs  Main.hs  Makefile  PoolTest.hs  QC.hs  TmpDir.hs  Util.hs
