name: harchive
version: 0.2.1
copyright: (C) 2007, David Brown
license: GPL
license-file: COPYING
author: David Brown <harchive@davidb.org>
maintainer: David Brown <harchive@davidb.org>
build-depends: base, binary >= 0.2, network, zlib, unix, parsec,
	bytestring,
	HDBC >= 1.1.3,
	HDBC-sqlite3 >= 1.1.3,
	dataenc >= 0.11.1
category: System
synopsis: Networked content addressed backup and restore software.
description:
  Implements software to perform backups and restores of filesystem
  data to a content addressed storage pool.  Very preliminary version.
homepage: http://www.davidb.org/darcs/harchive/
build-type: Simple
Cabal-Version: >= 1.2

-- Build this into a library for the unit test code.
library
   hs-source-dirs: src
   build-depends:
      base, binary >= 0.2, zlib, parsec,
      bytestring,
      HDBC >= 1.1.3,
      HDBC-sqlite3 >= 1.1.3,
      dataenc >= 0.11.1
   ghc-options: -Wall
   extra-libraries: ssl
   exposed-modules:
      HexDump
      Chunk
      Hash

-- Initial experiementation with ldump compatability.
executable hcat
   main-is: HCat.hs
   hs-source-dirs: src
   ghc-options: -Wall
   extra-libraries: ssl
   Other-Modules:
      HexDump
      Chunk
      Hash

-- executable: hfile
-- main-is: FileServer.hs
-- hs-source-dirs: src
-- extensions: ForeignFunctionInterface
-- extra-libraries: ssl
-- -- ghc-options: -Wall -Werror
-- ghc-options: -Wall -Werror -O2
-- other-modules:
--   Hash
--   Protocol
--   Status
--   Devid
--   Attributes
-- 
-- executable: hpool
-- main-is: PoolServer.hs
-- hs-source-dirs: src
-- extensions: ForeignFunctionInterface
-- extra-libraries: ssl sqlite3
-- -- ghc-options: -Wall -Werror
-- -- ghc-options: -Wall
-- ghc-options: -Wall -Werror -O2
-- -- ld-options: -threaded
-- other-modules:
--   Hash
--   Protocol
--   Sqlite3
--   Store
