name: harchive
version: 0.2.1
copyright: (C) 2007, David Brown
license: GPL
license-file: COPYING
author: David Brown <harchive@davidb.org>
maintainer: David Brown <harchive@davidb.org>
build-depends: base, binary >= 0.2, network, unix, parsec,
	-- earlier versions of zlib work, but require a codechange (in
	-- comments).
	zlib >= 0.5,
	mtl >= 1.0,
	bytestring,
	HDBC >= 1.1.3,
	HDBC-sqlite3 >= 1.1.3,
	dataenc >= 0.11.1,
	directory >= 1
category: System
synopsis: Networked content addressed backup and restore software.
description:
  Implements software to perform backups and restores of filesystem
  data to a content addressed storage pool.  Very preliminary version.
homepage: http://www.davidb.org/darcs/harchive/
build-type: Simple
Cabal-Version: >= 1.2

-- Build this into a library for the unit test code.
library
   hs-source-dirs: src
   build-depends:
      base, binary >= 0.2, zlib, parsec,
      bytestring,
      HDBC >= 1.1.3,
      mtl >= 1.0,
      HDBC-sqlite3 >= 1.1.3,
      dataenc >= 0.11.1,
      directory >= 1,
      filepath >= 1.1,
      containers >= 0.1,
      network >= 2.1,
      time >= 1.1.2, old-locale
   ghc-options: -Wall
   extra-libraries: ssl
   exposed-modules:
      Hash
      HexDump
      Chunk
      Chunk.IO
      DB
      Pool
      Pool.Local
      Pool.Memory
      Auth
      Server
   other-modules:
      MBox
      Status
      Progress

-- Initial experiementation with ldump compatability.
executable hcat
   main-is: HCat.hs
   hs-source-dirs: src
   ghc-options: -Wall
   extra-libraries: ssl
   Other-Modules:
      Hash
      HexDump
      Chunk
      Chunk.IO

executable harchive
   main-is: Harchive.hs
   hs-source-dirs: src
   ghc-options: -Wall
   extra-libraries: ssl
   Other-Modules:
      Hash
      HexDump
      Chunk
      Chunk.IO
      DecodeSexp
      Status
      Progress
      MBox
      Tree
      Pool
      Pool.Local

-- executable: hfile
-- main-is: FileServer.hs
-- hs-source-dirs: src
-- extensions: ForeignFunctionInterface
-- extra-libraries: ssl
-- -- ghc-options: -Wall -Werror
-- ghc-options: -Wall -Werror -O2
-- other-modules:
--   Hash
--   Protocol
--   Status
--   Devid
--   Attributes
-- 
-- executable: hpool
-- main-is: PoolServer.hs
-- hs-source-dirs: src
-- extensions: ForeignFunctionInterface
-- extra-libraries: ssl sqlite3
-- -- ghc-options: -Wall -Werror
-- -- ghc-options: -Wall
-- ghc-options: -Wall -Werror -O2
-- -- ld-options: -threaded
-- other-modules:
--   Hash
--   Protocol
--   Sqlite3
--   Store
